# plotlywrapper

./: .gitignore  .travis.yml  History.md  Makefile  README.md  README.rst  debug.sh  demo.ipynb  flit.ini  mypy.ini  pip-requirements.txt  plotlywrapper.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  test-requirements.txt  test.py  test_mat.py  test_plots.py
doc/: Makefile  charts.rst  conf.py  examples.rst  fig_bar.html  fig_between.html  fig_bubble.html  fig_heatmap.html  fig_heatmap2.html  fig_hist.html  fig_hist2d.html  fig_line.html  fig_parallel.html  fig_scatter.html  fig_twinx.html  fig_zero.html  figures.py  index.rst  pandas.rst  styling.rst  unsupported.rst
