[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "plotlywrapper"
author = "Jacques Kvam"
author-email = "jwkvam+pypi@gmail.com"
home-page = "https://github.com/jwkvam/plotlywrapper"
description-file = "README.rst"
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 2",
"Programming Language :: Python :: 2.7",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.4",
"Programming Language :: Python :: 3.5",
"Programming Language :: Python :: 3.6"
]
requires = [
"plotly",
"numpy",
"pandas",
"future"
]
keywords = "plotly chart visualization interactive"
